# py-image-registration

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dataset_processing_notebook.ipynb  Pipfile  README.md  Sitk_Demo_Registration.ipynb  environment.yaml  environment.yml  multi_spect_reg.py  pyproject.toml  setup.py
cfg/: 6x_config.ini  reg_config-6x-noRE.ini  reg_config-6x.ini  reg_config.ini
imgreg/: multi_spect_common.py  multi_spect_dataset_handling.py  multi_spect_image_io.py  multi_spect_plotting_utils.py  multi_spect_reg_config.py  sitk_multi_spect_registration.py
multi_spect_tools/: _version.py  multi_spect_common.py  multi_spect_dataset_handling.py  multi_spect_image_io.py  multi_spect_reg_config.py  sitk_multi_spect_registration.py
