[tool.poetry]
name = "imgreg"
version = "1.2.3"
description = ""
authors = ["Samuel Williams <sam.williams@sentera.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.3"
opencv-python = "^4.5.1"
SimpleITK = "2.1.1" # Temporarily lock to 2.1.1 because 2.1.1.1 was "yanked"
matplotlib = "^3.4.1"
imgparse = {git = "ssh://git@github.com/SenteraLLC/py-image-metadata-parser.git", tag = "v1.12.4"}
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
